# swagger.yaml
@@ -91,21 +91,6 @@ paths:
       responses:
         200:
           description: Recording stopped successfully
-  /stop-recording/{id}:
-    post:
-      summary: Stop a recording
-      parameters:
-        - name: id
-          in: path
-          required: true
-          type: string
-        - name: video
-          in: formData
-          type: file
-          required: true
-      responses:
-        200:
-          description: Recording stopped successfully
   /recording/transcript/{id}:
     get:
       summary: Get the transcript of a recording
